# caminatus

./: .editorconfig  .eslintrc.json  .gitignore  Cargo.toml  config.yaml.example  license  makefile.toml  package-lock.json  package.json  readme.md  webpack.config.js
.devcontainer/: devcontainer.json  dockerfile
examples/: mcp960x_poll.rs  mcp960x_read.rs  schedule_reader.rs
profiles/: sample.yaml
public/: build-info.json  bundle.js  bundle.js.LICENSE.txt  index.html  sse-test.html  websocket-test.html
schedules/: fast.yaml  sample.yaml  sample2.yaml
scripts/: release.sh
src/: config.rs  device.rs  kiln.rs  lib.rs  main.rs  oven_control.rs  schedule.rs  sensor.rs  server.rs
src/client/: app.js  dashboard.js  index.js  nav.js  package-lock.json  schedules.js  server-events.js  settings.js  status.js  webpack.config.js
src/client/components/: button.js  icons.js  index.js
src/client/schedule/: common.js  create.js  detail.js  index.js  list.js
src/device/: kiln.rs  kiln_control.rs
src/device/kiln/: controller.rs
src/kiln/: kiln_control.rs  max31855.rs  mcp960x.rs  thermocouple.rs
src/schedule/: error.rs  parser.rs  step.pest
src/sensor/: heater.rs  max31855.rs  mcp9600.rs  mcp960x.rs  thermocouple.rs
src/server/: command.rs  log.rs  manager.rs  monitor.rs  web.rs
src/server/web/: device.rs  error.rs  schedules.rs  sse.rs  static_file.rs  steps.rs
tests/: schedule_file_tests.rs
tests/sample_schedules/: duration_and_rate.yaml  no_change_in_step.yaml  not_enough_steps.yaml  valid.json  valid.yaml
