[package]
name = "caminatus"
version = "0.0.0"
authors = ["Brian <neumaics@gmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bytes = "1"
chrono = "0.4"
futures = { version = "0.3.12", default-features = false, features = ["alloc"] }
rsfuzzy = { git = "https://github.com/auseckas/rsfuzzy" }
tokio = { version = "1.2", features = ["full"] }
tokio-stream = "0.1.3"
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = { version = "0.2.4", features = ["tokio", "futures-03"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
serde_json = "1.0"
pest = "2.1.3"
pest_derive = "2.1.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
warp = { version = "0.3", features = ["default"] }

# [target.'armv7-unknown-linux-gnueabihf'.dependencies]
rppal = { version = "0.11.3", features = ["hal"] }
embedded-hal = "0.2"
bitbang-hal = "0.3.2"

[dev-dependencies]
tempfile = "3.1.0"
